# wootz-browser

./: .gitignore  README.md  justfile
components/action_url/content/browser/: BUILD.gn  content_action_url_driver_factory.cc  content_action_url_driver_factory.h
components/action_url/core/mojom/: BUILD.gn  anchor_util_mojom_traits.h
src/: args.gn  dex.txt  package-lock.json  package.json  tsconfig-webpack.json  tsconfig.json
src/base/: BUILD.gn
src/base/android/: action_spec_json.cc  action_spec_json.h
src/chrome/android/: BUILD.gn  chrome_java_resources.gni  chrome_java_sources.gni  chrome_public_apk_tmpl.gni
src/chrome/android/java/: AndroidManifest.xml
src/chrome/browser/: BUILD.gn  about_flags.cc  chrome_browser_main.cc  chrome_content_browser_client.cc  chrome_content_browser_client_receiver_bindings.cc  flag-metadata.json  wootz_browser_process.cc  wootz_browser_process.h
src/chrome/browser/download/: chrome_download_manager_delegate.cc  download_crx_util_android.cc
src/chrome/browser/extensions/: BUILD.gn  (+7 more)
src/chrome/common/: webui_url_constants.cc  webui_url_constants.h  wootz_renderer_configuration.mojom
src/chrome/gin/: converter_specializations.cc  converter_specializations.h
src/chrome/net/: BUILD.gn  sources.gni
src/chrome/renderer/: BUILD.gn  chrome_content_renderer_client.cc  chrome_content_renderer_client.h  wootz_render_thread_observer.cc  wootz_render_thread_observer.h  wootz_wallet_render_frame_observer.cc
src/chrome/resources/: BUILD.gn  allowlist.gni  resource_ids.spec  wootz_allowlist.py  wootz_grit.gni
src/chrome/script/: transpile-web-ui.py
src/components/: permissions_strings.grdp
src/components/api_request_helper/: BUILD.gn  api_request_helper.cc  api_request_helper.h  api_request_helper_unittest.cc
src/components/common/: typescript.gni
src/components/component_updater/: component_updater_service.cc
src/components/constants/: BUILD.gn  network_constants.h  pref_names.h  url_constants.h  webui_url_constants.h  wootz_constants.cc  wootz_constants.h  wootz_paths.h  wootz_services_key_helper.cc  wootz_services_key_helper.h  wootz_switches.h
src/components/filecoin/: BUILD.gn
src/components/ipfs/: BUILD.gn  ipfs_utils.cc  ipfs_utils.h
src/components/json/: BUILD.gn
src/components/p3a_utils/: bucket.h  feature_usage.cc  feature_usage.h  feature_usage_unittest.cc
src/components/permissions/: permission_expiration_key.cc  permission_expiration_key.h  permission_expirations.cc  permission_expirations.h  permission_lifetime_manager.cc  permission_lifetime_manager.h  permission_lifetime_options.cc  permission_lifetime_options.h  permission_lifetime_pref_names.h  permission_lifetime_utils.cc  permission_lifetime_utils.h  permission_manager.cc  permission_origin_lifetime_monitor.h  permission_origins.cc  permission_origins.h  permission_request_data.cc  permission_widevine_utils.cc  permission_widevine_utils.h  sources.gni  wootz_permission_manager.cc  wootz_permission_manager.h
src/components/resources/: BUILD.gn  wootz_components_resources.grd  wootz_components_strings.grd  wootz_wallet_resources.grdp
src/components/time_period_storage/: BUILD.gn  daily_storage.cc  daily_storage.h  daily_storage_unittest.cc  iso_weekly_storage.cc  iso_weekly_storage.h  monthly_storage.cc  monthly_storage.h  time_period_storage.cc  time_period_storage.h  time_period_storage_unittest.cc  weekly_event_storage.cc  weekly_event_storage.h  weekly_event_storage_unittest.cc  weekly_storage.cc  weekly_storage.h
src/components/update_client/: update_client.cc
src/components/version_info/: version_info_unittest.cc
src/components/webpack/: BUILD.gn  gen-webpack-grd.js  path-map.js  polyfill.js  webpack-plugin-depfile.js  webpack.config.js
src/components/webui/: BUILD.gn  webui_resources.cc
src/crypto/: aead.cc
src/device/fido/: features.cc  features.h
src/docs/: google_chrome_branded_builds.md
src/extensions/browser/: extension_event_histogram_value.h  extension_function_histogram_value.h
src/extensions/buildflags/: buildflags.gni
src/extensions/common/: extension.cc  manifest_constants.h
src/tools/gritsettings/: resource_ids.spec
src/wallet-standard-wootzapp/: babel.config.json  package-lock.json  package.json  rollup.config.js  tsconfig.base.json
src/wallet-standard-wootzapp/lib/: index.iife.min.js  index.iife.min.js.map
src/wallet-standard-wootzapp/src/: account.ts  icon.ts  initialize.ts  wallet.ts  window.ts
(+1082 files in other folders)
