# Copyright 2024 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/tools/bindings/mojom.gni")

mojom("anchor_util") {
  generate_java = true
  sources = [ "anchor_util.mojom" ]

  public_deps = [
    "//mojo/public/mojom/base",
    "//url/mojom:url_mojom_gurl",
  ]

  cpp_typemaps = [
    {
      types = [
        {
          mojom = "action_url.mojom.AnchorData"
          cpp = "::action_url::AnchorData"
        },
      ]
      traits_headers = [ "anchor_util_mojom_traits.h" ]
      traits_sources = [ "anchor_util_mojom_traits.cc" ]
      traits_public_deps = [
        "//base",
        "//components/action_url/core",
      ]
    },
  ]
}
