# Copyright 2024 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/android/config.gni")
import("//build/config/android/rules.gni")
import("//third_party/jni_zero/jni_zero.gni")

android_library("java") {
  sources = [
    "java/org/chromium/components/action_url/ActionUrlHandler.java",
    "java/org/chromium/components/action_url/ActionUrlListFetcher.java",
    "java/org/chromium/components/action_url/ActionUrlFetchedCallback.java",
  ]

  deps = [
    "//base:base_java",
    "//content/public/android:content_java",
    "//third_party/jni_zero:jni_zero_java",
    "//url:gurl_java",
    "//net/android:net_java",
    #"//third_party/android_deps:org_jsoup_jsoup_java",
  ]

  srcjar_deps = [ ":jni_headers" ]
  resources_package = "org.chromium.components.action_url"
}

generate_jni("jni_headers") {
  sources = [ "java/org/chromium/components/action_url/ActionUrlHandler.java" ]
}

static_library("android") {
  sources = [
    "action_url_handler_android.cc",
    "action_url_handler_android.h",
  ]

  deps = [
    ":jni_headers",
    "//base",
    "//components/action_url/core",
    "//content/public/browser",
    "//services/network/public/cpp",
  ]
}
