# Copyright 2024 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/tools/bindings/mojom.gni")

mojom("mojom") {
  sources = [
    "action_url_agent.mojom",
    "action_url_driver.mojom",
  ]

  public_deps = [
    "//components/action_url/core/mojom:anchor_util",
    "//mojo/public/mojom/base",
  ]
}
